Did some testing on mobile. Fixed a layout bug by adding viewport meta tag to head in index.html. Also updated TODO list in plan.txt.

--- a/index.css
+++ b/index.css
@@ -104,5 +104,8 @@ ul{
 @media (max-width: 700px) {
     #flexbox_frame{ grid-template-columns: 1fr; }
     * { --img-size: 100vw; }
+    .info_box{
+        min-height: initial;
+    }
 }
 
